--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-player": "^2.13.0"
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/system": "^5.14.20",
+    "date-fns": "^2.30.0",
+    "react-activity-feed": "^1.4.0",
+    "react-icons": "^4.12.0",
+    "react-player": "^2.13.0",
+    "react-router-dom": "^6.20.1",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
