--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/system": "^5.14.20",
     "date-fns": "^2.30.0",
     "react-activity-feed": "^0.10.2",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^4.12.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.21.2",
